<resources>
    <string name="app_name">From To Do - To Done</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome">Welcome</string>
    <string name="lists">Lists</string>
    <string name="completed">Completed!</string>
    <string name="delete">Delete?</string>
    <string name="items">ITEMS</string>
    <string name="username_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="add_item">ADD</string>
    <string name="details">Details</string>
    <string name="signup">SIGN UP</string>
    <string name="priority">PRIORITY</string>
    <string name="cancel">Cancel</string>
    <string name="map">MAP</string>
    <string name="urgent">Urgent</string>
    <string name="normal">Normal</string>
    <string name="done">DONE</string>
    <string name="address">Enter ADDRESS:</string>
    <string name="addLists">Add LISTS ----------------></string>
</resources>
